binsard/tests/compile_fail/unsupported_option_inner_type.rs
use binsard::{Decode, Encode};

#[derive(Encode, Decode)]
struct UnsupportedOptionInner {
    value: Option<[u8; 1 + 1]>,
}

fn main() {}

